<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollViewID"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- The code in here contains the headers. -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#607D8B"
            android:padding="16dp"
            android:text="@string/appTitle"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/appDescription" />

        <!-- The code in here contains Q1. -->
        <TextView
            android:id="@+id/Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/questionOne" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/Q1Answers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Q1A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q1AnswerA" />

            <RadioButton
                android:id="@+id/Q1B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q1AnswerB" />

            <RadioButton
                android:id="@+id/Q1C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q1AnswerC" />

            <RadioButton
                android:id="@+id/Q1D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q1AnswerD" />
        </RadioGroup>
        <!-- The code in here contains Q2. -->
        <TextView
            android:id="@+id/Q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/questionTwo" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/Q2Answers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Q2A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q2AnswerA" />

            <RadioButton
                android:id="@+id/Q2B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q2AnswerB" />

            <RadioButton
                android:id="@+id/Q2C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q2AnswerC" />

            <RadioButton
                android:id="@+id/Q2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q2AnswerD" />
        </RadioGroup>
        <!-- The code in here contains Q3. -->
        <TextView
            android:id="@+id/Q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/questionThree" />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/Q3Answers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Q3A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q3AnswerA" />

            <RadioButton
                android:id="@+id/Q3B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q3AnswerB" />

            <RadioButton
                android:id="@+id/Q3C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q3AnswerC" />

            <RadioButton
                android:id="@+id/Q3D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q3AnswerD" />
        </RadioGroup>
        <!-- The code in here contains Q4. -->
        <TextView
            android:id="@+id/Q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/questionFour" />
        <CheckBox android:id="@+id/Q4A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4AnswerA" />
        <CheckBox android:id="@+id/Q4B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4AnswerB" />
        <CheckBox android:id="@+id/Q4C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4AnswerC" />
        <CheckBox android:id="@+id/Q4D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4AnswerD" />
        <!-- The code in here contains Q5. -->
        <TextView
            android:id="@+id/Q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/questionFive" />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/Q5Answers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Q5A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q5AnswerA" />

            <RadioButton
                android:id="@+id/Q5B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q5AnswerB" />

            <RadioButton
                android:id="@+id/Q5C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q5AnswerC" />

            <RadioButton
                android:id="@+id/Q5D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q5AnswerD" />
        </RadioGroup>
        <!-- The code in here contains Q6. -->
        <TextView
            android:id="@+id/Q6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/questionSix" />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/Q6Answers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Q6A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q6AnswerA" />

            <RadioButton
                android:id="@+id/Q6B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q6AnswerB" />

            <RadioButton
                android:id="@+id/Q6C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q6AnswerC" />

            <RadioButton
                android:id="@+id/Q6D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Q6AnswerD" />
        </RadioGroup>
        <!-- The code in here contains Q7. -->
        <TextView
            android:id="@+id/Q7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/questionSeven" />
        <EditText
            android:id="@+id/Q7Answer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:inputType="text"/>
        <!-- The following is the final "Get Results Button -->
        <Button
            android:id="@+id/getResultsButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/getResults"
            android:onClick="getResults"/>

    </LinearLayout>
</ScrollView>